obrazki i elementy blokowe

--- a/public_html/listy.html
+++ b/public_html/listy.html
@@ -7,15 +7,18 @@
 
 <head>
 <meta charset="utf-8" />
-<title>bez nazwy</title>
+<title>Klasa 1a</title>
 <meta name="Listy HTML" content="Geany 1.29" />
 </head>
 
 <body>
+    <h1>Klasa 1a</h1>
+    <h2>Lista uczniów</h2>
     <div>
         <a href="index.1html">Strona główna</a>
         <a href="listy.html">Listy</a>
         <a href="plan.html">Plan</a>
+        <a href="specjalne/klasa1a.html">Klasa 1a</a>
     </div>
     <h3>Lista numerowana</h3>
     <ol>
@@ -30,6 +33,10 @@
         <li>Drugi element</li>
         <li>Trzeci punkt</li>
     </ul>
+    <p>
+     <img src="img/pantera.jpg">
+    
+    </p>
 </body>
 
 </html>
