--- a/public_html/plan.html
+++ b/public_html/plan.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
+    <h1>Klasa 1a</h1>
+    <h2>Lista uczniów</h2>
     <div>
         <a href="index.1html">Strona główna</a>
         <a href="listy.html">Listy</a>
         <a href="plan.html">Plan</a>
+        <a href="specjalne/klasa1a.html">Klasa 1a</a>
     </div>
 <h1>Plan lekcji</h1>
 <h2> Plan lekcji</h2>
