--- a/public_html/listy.html
+++ b/public_html/listy.html
@@ -9,6 +9,7 @@
 <meta charset="utf-8" />
 <title>Klasa 1a</title>
 <meta name="Listy HTML" content="Geany 1.29" />
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
