--- a/public_html/formularze.html
+++ b/public_html/formularze.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Hello, world!</h1>
 <!-- tabelka -->
-    <form name="formularz" id="formularz">
+    <form name="formularz" id="formularz" method="POST" action="/rejestracja.php">
       <table class="table">
         <tr>
           <td>
@@ -29,6 +29,12 @@
       <input type="text" name="nazwisko" value="" placeholder="Nazwisko">
     </td>
   </tr>
+
+  <tr>
+    <td colspan="2">
+   <input type="password" name="haslo" value="">
+    </td>
+  </tr>
 </table>
 <!-- przyciski radio -->
 <label for="gender">Wybierz płeć:</label><br>
@@ -39,11 +45,21 @@
 
     <br>
     <!-- wielokrotny wybór -->
-    <input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
-      <input type="checkbox" name="vehicle2" value="Car"> I have a car
+    <input type="checkbox" name="vehicle1" value="Bike">Na pichote<br>
+      <input type="checkbox" name="vehicle2" value="Car"> Woże się passatem w TDI
     <br>
-
+<!-- lista opcji  -->
+<select name="cars">
+ <option value="1">Pasat w TDI</option>
+ <option value="2">Maluch</option>
+ <option value="3">Fiat cikuciento</option>
+ <option value="4">Audi w LPG</option>
+</select>
+<br>
+<textarea name="komentarz" rows="4" cols="80"></textarea>
+<br>
   <input type="submit" name="zapisz" value="Zapisz">
+  <input type="reset" name="reset" value="Reset">
     </form>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
