--- a/public_html/bootstrap.html
+++ b/public_html/bootstrap.html
@@ -4,36 +4,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
+    <title>Terraria The Game</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <style media="screen">
+      body {
+        background: url('header.jpg');
+        background-attachment: fixed;
+        background-position:center;
+        background-size: cover;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="col bg-primary text-white">1 kolumna</div>
-        <div class="col bg-primary text-white">2 kolumna
-        </div>
-        <div class="col bg-primary text-white">
-          3kolumna
-        </div>
+        <div class="col-sm-6 col-lg-4 col-xl-2 bg-info text-white">
+          <div class="rounded">
+<img src="kombat.jpg" alt="" class="d-none d-md-block  img-fluid border border-light p-2 rounded my-3">
+        </div></div>
+        <div class="col-sm-6 col-lg-6 col-xl-6 bg-secondary text-white">
+        <h1>Witaj nas stronie</h1>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+        <div class="col-sm-12 col-lg-2 col-xl-4 bg-warning text-white">
+          <div class="rounded">
+<img src="indeks.jpeg" alt="" class="img-fluid border border-black p-3 rounded my-3">
+      </div></div>
+
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col bg-primary text-white">jedna kolumna</div>
-        <div class="col bg-primary text-white">jedna kolumna</div>
-        <div class="col bg-primary text-white">jedna kolumna</div>
-      </div>
-    </div>
-
-    <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-  <!-- Popper JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   </body>
 </html>
