--- a/public_html/bootstrap_flex.html
+++ b/public_html/bootstrap_flex.html
@@ -29,31 +29,42 @@
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <blockquote class="blockquote text-left">
             <p class="mb-0">Cytaty są fajne</p>
-            <footer class="blockquote-footer">Skromny mat-fizowiec</footer></blockquote >
+            <footer class="blockquote-footer">Skromny mat-fizowiec</footer>
+          </blockquote>
 
-            <ul class="list-unstyled">
-  <li>Lorem ipsum dolor sit amet</li>
-  <li>Consectetur adipiscing elit</li>
-  <li>Integer molestie lorem at massa</li>
-  <li>Facilisis in pretium nisl aliquet</li>
-  <li>Nulla volutpat aliquam velit
-    <ul class="list-inline">
-      <li>Phasellus iaculis neque</li>
-      <li>Purus sodales ultricies</li>
-      <li>Vestibulum laoreet porttitor sem</li>
-      <li>Ac tristique libero volutpat at</li>
-    </ul>
-  </li>
-  <li>Faucibus porta lacus fringilla vel</li>
-  <li>Aenean sit amet erat nunc</li>
-  <li>Eget porttitor lorem</li>
-</ul>
-<ul class="list-inline">
-  <li class="list-inline-item">Phasellus iaculis neque</li>
-  <li class="list-inline-item">Purus sodales ultricies</li>
-  <li class="list-inline-item">Vestibulum laoreet porttitor sem</li>
-  <li class="list-inline-item">Ac tristique libero volutpat at</li>
-</ul>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col">
+              <div class="bg-white p-3 d-flex flex-row ">
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+          <div class="gallery">
+            <figure class="gallery-item">
+              <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss1.jpg">
+            </figure>
+            <figure class="gallery-item">
+              <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss2.jpg">
+            </figure>
+            <figure class="gallery-item">
+              <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss3.jpg">
+            </figure>
+            <figure class="gallery-item">
+              <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss4.jpg">
+            </figure>
+            <figure class="gallery-item">
+              <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss5.jpg">
+            </figure>
+            <figure class="gallery-item">
+              <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss6.jpg">
+            </figure>
+          </div>
+
       </div>
         <div class="col-sm-12 col-lg-2 col-xl-4 bg-secondary text-white">
           <div class="rounded">
