--- a/public_html/bootstrappraca domowa.html
+++ b/public_html/bootstrappraca domowa.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style1.css">
-</head>
+
   <body>
 
     <div class="container">
@@ -28,9 +28,13 @@
           <h3><span style="font-size: 2.5rm"><mark>Lorem ipsum,</mark> dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</span></h3>
           <h4>Superrr!!!!!<del>Jakiś tekst przykładowy</del></h4>
           <p><s>asdasfafss</s></p>
-        </div></div>
+        </div>
 
+
+
+</div>
         <div class="col-sm-12 col-lg-3 col-xl-3 bg-warning text-green">
+
         </div>
 
 <div class="container">
