--- a/bootstrap/modal.html
+++ b/bootstrap/modal.html
@@ -101,10 +101,10 @@
 </div>
 
 <div class="col-6">
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#oknoModal">
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#okienkoModal">
 Guzik
 </button>
-  <div class="modal" tabindex="-1" id="okienkoModal" role="dialog">
+  <div class="modal fade" tabindex="-1" id="okienkoModal" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -126,8 +126,11 @@ Guzik
 </div>
 </div>
 </div>
-
-<div class="modal" tabindex="-1" id="oknoModal" role="dialog">
+<div class="col-6">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#oknoModal">
+Guzik 2
+</button>
+<div class="modal fade" tabindex="-1" id="oknoModal" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -137,13 +140,25 @@ Guzik
         </button>
       </div>
       <div class="modal-body">
-        <p>Pojechał w Bieszczady i został w Formozie</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary">Zapisz se albo nie</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
       </div>
     </div>
+  </div>
+</div>
+  <div class="row">
+    <div class="col-6">
+      <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+  Wsparcie powietrzne
+</button>
+<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
+  Dywizja pancerna
+</button>
+    </div>
+
   </div>
 </div>
   <!-- Stopka strony: copyrights, dodatkowe linki itp. -->
