--- a/quiz/szablon.html
+++ b/quiz/szablon.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>{% block tytul %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -23,20 +23,20 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Strona główna</a>
+        <a class="navbar-brand js-scroll-trigger" href="{{ url_for('index') }}">Strona główna</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Lista pytań</a>
+              <a class="nav-link js-scroll-trigger" href="{{ url_for('lista') }}">Lista pytań</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Quiz</a>
+              <a class="nav-link js-scroll-trigger" href="{{ url_for('quiz') }}">Quiz</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Dodaj pytanie</a>
+              <a class="nav-link js-scroll-trigger" href="{{ url_for('dodaj') }}">Dodaj pytanie</a>
             </li>
           </ul>
         </div>
@@ -45,7 +45,7 @@
 
     <header class="bg-primary text-white">
       <div class="container text-center">
-        <h1>Witamy w Milionerach!</h1>
+        <h1><center>{% block h1 %}{% endblock %}</center></h1>
         <p class="lead">Odpowiedz na pytania i zgarnij million dolarów! $$</p>
       </div>
     </header>
@@ -54,14 +54,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About this page</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-            <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-            </ul>
+            {% block tresc %}
+            {% endblock %}
           </div>
         </div>
       </div>
